Add correct learn more URL for SMB shares settings.

- Adds the correct link for the network file shares help page. The content
on the target page is still being updated.

Bug: chromium:889830
Change-Id: I583ed05c144d5938c4c9acdadb4515e1828bc8f3
Reviewed-on: https://chromium-review.googlesource.com/1249824
Reviewed-by: Scott Chen <scottchen@chromium.org>
Commit-Queue: Bailey Berro <baileyberro@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595148}
Former-commit-id: 42f4734035b913b1689a72f2cbe698d66fb387b0